Avoid content jumping around on refresh with min-height

--- a/templates/main.css
+++ b/templates/main.css
@@ -29,6 +29,10 @@
       justify-content: space-around;
     }
 
+    .graphs {
+      min-height: 274px;
+    }
+
     .flex-column {
       flex-flow: column wrap;
     }
